web-infras/parser/tests/fixtures/esprima/ES6/generator/generator-parameter-invalid-computed-property-name/output.txt
[SyntaxError]: function statement requires a name (2,14)
2|    function*({[yield 3]: y}) {}
 |            ^
[SyntaxError]: yield expression can not used in parameter list (2,17)
2|    function*({[yield 3]: y}) {}
 |               ^
